[gd_scene load_steps=8 format=3 uid="uid://cgt0muqvh6o3p"]

[ext_resource type="Script" uid="uid://cuq4ixqoajwxe" path="res://tools/minigame_new/minigame.gd" id="1_gluam"]
[ext_resource type="Script" uid="uid://bv1dbvetarrch" path="res://tools/minigame_new/timer_manager.gd" id="2_1cr48"]
[ext_resource type="Script" uid="uid://ckct71h7jv7yd" path="res://tools/minigame_new/ui_manager.gd" id="3_r0n4a"]
[ext_resource type="Texture2D" uid="uid://bs54kw4ef5h21" path="res://assets/ui/Mini Game Frame.png" id="4_shf1d"]
[ext_resource type="Texture2D" uid="uid://dki4a7c8ecavm" path="res://assets/ui/Score and Timer.png" id="5_4qq65"]
[ext_resource type="Texture2D" uid="uid://c875qeheydn86" path="res://assets/ui/goldcircle.png" id="6_7ytxs"]
[ext_resource type="FontFile" uid="uid://drk6ai4vky8ih" path="res://assets/ui/ttf/Halant-Bold.ttf" id="7_3m4lq"]

[node name="MinigameBase" type="Node2D"]
script = ExtResource("1_gluam")
game_duration = 2.0

[node name="TimerManager" type="Node" parent="."]
script = ExtResource("2_1cr48")

[node name="ReadyTimer" type="Timer" parent="TimerManager"]
one_shot = true

[node name="GameTimer" type="Timer" parent="TimerManager"]
one_shot = true

[node name="UIManager" type="CanvasLayer" parent="."]
script = ExtResource("3_r0n4a")

[node name="TextureRect" type="TextureRect" parent="UIManager"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_shf1d")

[node name="TimeBar" type="TextureRect" parent="UIManager"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -351.0
offset_top = 8.0
offset_right = 351.0
offset_bottom = 128.0
grow_horizontal = 2
texture = ExtResource("5_4qq65")

[node name="TextureProgressBar" type="TextureProgressBar" parent="UIManager/TimeBar"]
layout_mode = 0
offset_left = 291.0
offset_right = 411.0
offset_bottom = 120.0
max_value = 1.0
step = 0.0
value = 1.0
fill_mode = 5
texture_progress = ExtResource("6_7ytxs")

[node name="TimeLabel" type="Label" parent="UIManager/TimeBar"]
layout_mode = 0
offset_left = 415.0
offset_top = 10.0
offset_right = 607.0
offset_bottom = 112.0
theme_override_colors/font_color = Color(0.898039, 0.858824, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.360784, 0.262745, 0.101961, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("7_3m4lq")
theme_override_font_sizes/font_size = 64
text = "60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointLabel" type="Label" parent="UIManager/TimeBar"]
layout_mode = 0
offset_left = 74.0
offset_top = 10.0
offset_right = 266.0
offset_bottom = 112.0
theme_override_colors/font_color = Color(0.898039, 0.858824, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.360784, 0.262745, 0.101961, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("7_3m4lq")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TutorialHolder" type="Control" parent="UIManager"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CountdownLabel" type="Label" parent="UIManager"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -768.0
offset_top = -416.0
offset_right = 768.0
offset_bottom = 416.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.898039, 0.858824, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.32549, 0.262745, 0.101961, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("7_3m4lq")
theme_override_font_sizes/font_size = 200
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultsLayer" type="CanvasLayer" parent="."]

[node name="GameManager" type="Node" parent="."]

[connection signal="timeout" from="TimerManager/ReadyTimer" to="TimerManager" method="_on_ready_timer_timeout"]
[connection signal="timeout" from="TimerManager/GameTimer" to="TimerManager" method="_on_game_timer_timeout"]
